[add]implemented the function to call the hwgc device to execute the par_allocate_iml function and the par_allocate_iml device